--- a/build.gradle
+++ b/build.gradle
@@ -6,15 +6,11 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.1.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.9.RELEASE")
         //自动生成API文档
         classpath("com.github.shalousun:smart-doc-gradle-plugin:2.1.4")
     }
 }
-
-//plugins {
-//    id 'application'
-//}
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -24,19 +20,20 @@ repositories {
 }
 
 group = 'WLPT'
-version = '1.5.1'
-
-
-//sourceCompatibility = 1.8
-//targetCompatibility = 1.8
+version = '2.0.9'
 
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 apply plugin: "com.github.shalousun.smart-doc"
 
 springBoot  {
-    mainClass = 'pw.ewen.WLPT.Application'
+    mainClassName = 'pw.ewen.WLPT.Application'
+}
+
+compileJava {
+    options.compilerArgs << '-Xlint:deprecation'
 }
 
 // In this section you declare the dependencies for your production and test code
@@ -49,18 +46,16 @@ dependencies {
             "org.springframework.boot:spring-boot-starter-cache",
             "org.springframework.security:spring-security-acl",
             "net.sf.ehcache:ehcache",
-            "org.apache.commons:commons-lang3:3.5",
+            "org.apache.commons:commons-lang3",
             "org.hibernate:hibernate-java8",
+            "mysql:mysql-connector-java",
+            "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
     )
     compile("org.hibernate:hibernate-ehcache"){
         exclude group: "net.sf.ehcache", module: "ehcache-core"
     }
+    runtimeOnly("org.springframework.boot:spring-boot-properties-migrator")
 
-    compile(
-//            "mysql:mysql-connector-java:8.0.25"
-            "mysql:mysql-connector-java:5.1.49",
-            "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.8.6"
-    )
     testImplementation (
             "org.springframework.boot:spring-boot-starter-test",
             "org.springframework.security:spring-security-test",
