对CORS和密码保存进行修改

--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ springBoot  {
 }
 
 compileJava {
-    options.compilerArgs << '-Xlint:deprecation'
+//    options.compilerArgs << '-Xlint:deprecation'
 }
 
 // In this section you declare the dependencies for your production and test code
