--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.9.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.3.12.RELEASE")
         //自动生成API文档
         classpath("com.github.shalousun:smart-doc-gradle-plugin:2.1.4")
     }
@@ -20,7 +20,7 @@ repositories {
 }
 
 group = 'WLPT'
-version = '2.0.9'
+version = '2.3.12'
 
 apply plugin: 'java'
 apply plugin: 'idea'
@@ -33,7 +33,7 @@ springBoot  {
 }
 
 compileJava {
-//    options.compilerArgs << '-Xlint:deprecation'
+    options.compilerArgs << '-Xlint:deprecation'
 }
 
 // In this section you declare the dependencies for your production and test code
