--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -6,7 +6,7 @@ spring:
   jpa:
     show-sql: false
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: false
@@ -22,4 +22,3 @@ bizconfig:
     file_upload_root_path: /home/wenliang/Webs/frontends/wlpt_ng_alain/downloads/
 
 frontendUrls: http://aliyun.ewen.pw:9101  # 前端程序部署地址
-#frontendUrls: http://localhost:4200
