--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -6,7 +6,7 @@ spring:
   jpa:
     show-sql: false
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     properties:
       hibernate:
         format_sql: false
