--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -1,7 +1,7 @@
 server:
   port: 9001
   ssl:
-    key-store: classpath:/cert/6175226_aliyun.ewen.pw.jks
+    key-store: classpath:cert/6175226_aliyun.ewen.pw.jks
     key-store-password: fXo5r985
     key-store-type: JKS
 
@@ -13,7 +13,7 @@ spring:
   jpa:
     show-sql: false
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: false
@@ -28,4 +28,4 @@ bizconfig:
   file:
     file_upload_root_path: /home/wenliang/Webs/frontends/wlpt_ng_alain/downloads/
 
-frontendUrls: http://aliyun.ewen.pw:9101  # 前端程序部署地址
+frontendUrls: https://aliyun.ewen.pw:9101  # 前端程序部署地址
