--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ repositories {
 }
 
 group = 'WLPT'
-version = '2.3.12.3'
+version = '2.3.12.4'
 
 apply plugin: 'java'
 apply plugin: 'idea'
@@ -39,7 +39,7 @@ compileJava {
 // In this section you declare the dependencies for your production and test code
 dependencies {
     compile (
-//            "org.springframework.boot:spring-boot-devtools",
+            "org.springframework.boot:spring-boot-devtools",
             "org.springframework.boot:spring-boot-starter-data-jpa",
             "org.springframework.boot:spring-boot-starter-web",
             "org.springframework.boot:spring-boot-starter-security",
