--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,10 @@ compileJava {
     options.compilerArgs << '-Xlint:deprecation'
 }
 
+test {
+    useJUnitPlatform()
+}
+
 // In this section you declare the dependencies for your production and test code
 dependencies {
     compile (
@@ -49,7 +53,8 @@ dependencies {
             "org.apache.commons:commons-lang3",
             "org.hibernate:hibernate-java8",
             "mysql:mysql-connector-java",
-            "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
+            "com.fasterxml.jackson.datatype:jackson-datatype-jsr310",
+            "com.itextpdf:itext7-core:7.1.16"
     )
     compile("org.hibernate:hibernate-ehcache"){
         exclude group: "net.sf.ehcache", module: "ehcache-core"
@@ -58,8 +63,8 @@ dependencies {
 
     testImplementation (
             "org.springframework.boot:spring-boot-starter-test",
-            "org.springframework.security:spring-security-test",
-            files("libs/GroboTestingJUnit-1.2.1-core.jar"),
+//            "org.springframework.security:spring-security-test",
+//            files("libs/GroboTestingJUnit-1.2.1-core.jar"),
     )
 }
 
