--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -61,5 +61,24 @@ bizconfig:
         description: 卫星场地
 
   # 系统使用的日期时间格式
-  LocalDateTimeFormat: yyyy-MM-dd HH:mm:ss
-  LocalDateFormat: yyyy-MM-dd
+  localDateTimeFormat: yyyy-MM-dd HH:mm:ss
+  localDateFormat: yyyy-MM-dd
+  # 各区id对应Map
+  regionMap:
+   0: 市属
+   1: 黄浦区
+   4: 徐汇区
+   5: 长宁区
+   6: 静安区
+   7: 普陀区
+   9: 虹口区
+   10: 杨浦区
+   12: 闵行区
+   13: 宝山区
+   14: 嘉定区
+   15: 浦东新区
+   17: 奉贤区
+   18: 松江区
+   19: 金山区
+   20: 青浦区
+   21: 崇明区
