--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -22,9 +22,11 @@ spring:
 
 
   #业务自定义配置
-  #   文件上传路径
 bizconfig:
   file:
+    # 文件上传路径
     file_upload_root_path: D:\\开发项目\\WLPT\\wlpt_angular_alain\\downloads\\  #以斜杠结尾，表示目录
+    # 卫星场地审核单模板
+    weixing_field_audit_template: D:\\weixing.pdf
 
 frontendUrls: http://localhost:4200  # 前端程序部署地址
