--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -27,6 +27,8 @@ bizconfig:
     # 文件上传路径
     file_upload_root_path: D:\\开发项目\\WLPT\\wlpt_angular_alain\\downloads\\  #以斜杠结尾，表示目录
     # 卫星场地审核单模板
-    weixing_field_audit_template: D:\\weixing.pdf
+    weixing_field_audit_template: E:\\MyVIFs\\场地查看表单\\卫星场地.docx
+    # 娱乐场地审核单模板
+    yule_field_audit_template: E:\\MyVIFs\\场地查看表单\\娱乐场所.docx
 
 frontendUrls: http://localhost:4200  # 前端程序部署地址
