--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -13,7 +13,7 @@ spring:
       ddl-auto: update
     properties:
       hibernate:
-        format_sql: true
+        format_sql: false
 
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/changdi?useSSL=false&characterEncoding=utf8
@@ -23,6 +23,7 @@ spring:
 
   #业务自定义配置
 bizconfig:
+  # 文件相关配置
   file:
     # 文件上传路径
     file_upload_root_path: D:\\开发项目\\WLPT\\wlpt_angular_alain\\downloads\\  #以斜杠结尾，表示目录
@@ -30,5 +31,13 @@ bizconfig:
     weixing_field_audit_template: E:\\MyVIFs\\场地查看表单\\卫星场地.docx
     # 娱乐场地审核单模板
     yule_field_audit_template: E:\\MyVIFs\\场地查看表单\\娱乐场所.docx
+  # 定时任务相关配置
+  schedules:
+    # 定时更新资源阅读情况任务
+    resource_readed_info:
+      # cron表达式， - 表示禁用
+      cron: '-'
+      # 系统启动时是否执行
+      do_startup: true
 
 frontendUrls: http://localhost:4200  # 前端程序部署地址
