--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -20,7 +20,7 @@ spring:
 
   datasource:
     url: jdbc:mysql://mysql:3306/changdi?useSSL=false&characterEncoding=utf8
-    username: wenliang
+    username: root
     password: wenliang
 
 
