--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -31,6 +31,9 @@ bizconfig:
     weixing_field_audit_template: E:\\MyVIFs\\场地查看表单\\卫星场地.docx
     # 娱乐场地审核单模板
     yule_field_audit_template: E:\\MyVIFs\\场地查看表单\\娱乐场所.docx
+    # vod场地审核单模板
+    vod_field_audit_template: E:\\MyVIFs\\场地查看表单\\vod.docx
+
   # 定时任务相关配置
   schedules:
     # 定时更新资源阅读情况任务
