--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -14,8 +14,8 @@ spring:
 
   datasource:
     url: jdbc:mysql://mysql:3306/changdi?useSSL=false&characterEncoding=utf8
-    username: wenliang
-    password: wenliang
+    username: root
+    password: root
 
 bizconfig:
   file:
